# match-em

./: .gitignore  README.md  __init__.py  pyproject.toml  wav2vec_wer_tester.ipynb
match_em/: __init__.py  alignments.py  alignments_new.py  analysis.py  character_distances.py  distances.py
match_em/character_data/: character_traits.json
match_em/tests/: test_alignments.py  test_alignments_new.py  test_character_distances.py  test_distances.py  test_regressions.py
tests/: test_alignments.py  test_alignments_new.py  test_character_distances.py  test_distances.py  test_regressions.py
