[tool.poetry]
name = "match_em"
version = "1.2.0"
description = "Code to align two word sequences while considering word and character similarities."
authors = ["Phoebe Parsons <phoebe.l.t.parsons@ntnu.no>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/scribe-project/match-em"
include = ["LICENCE"]

[tool.poetry.dependencies]
python = "^3.6.2"
numpy = "1.21.0"
pandas = "1.4.0"
python-Levenshtein = "0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"